fix: 回退Java版本至8 + 修复Java9+语法(List.of/readAllBytes)兼容性问题